--- a/pihole.yml
+++ b/pihole.yml
@@ -42,13 +42,19 @@ spec:
   - port: 53
     name: "dns"
     targetPort: 53
-    protocol: TCP
-    #- port: 53
-    #  targetPort: 53
-    #  protocol: UDP
-    #- port: 67
-    #  targetPort: 67
-    #  protocol: UDP
+    protocol: UDP
+  selector:
+    app: pihole
+  type: LoadBalancer
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: pihole-service-web
+  namespace: pihole
+spec:
+  loadBalancerIP: 192.168.150.2
+  ports:
   - port: 80
     name: "web"
     targetPort: 80
