--- a/elk/apm-values.yml
+++ b/elk/apm-values.yml
@@ -38,8 +38,8 @@ service:
   # clusterIP: None
   ## External IP addresses of service
   ## Default: nil
-  # externalIPs:
-  # - 192.168.0.1
+  externalIPs:
+  - 192.168.150.101
   #
   ## LoadBalancer IP if service.type is LoadBalancer
   ## Default: nil
