get this working

--- a/elk/apm-values.yml
+++ b/elk/apm-values.yml
@@ -32,7 +32,7 @@ updateStrategy: {}
 
 service:
   enabled: true
-  type: ClusterIP
+  type: LoadBalancer
   port: 8200
   # portName: apm-server-svc
   # clusterIP: None
