--- a/minecraft.yml
+++ b/minecraft.yml
@@ -26,7 +26,7 @@ spec:
   loadBalancerIP: 192.168.150.10
   ports:
   - port: 25565
-    targetPort: 25565 
+    targetPort: 25565
   selector:
     app: minecraft
   type: LoadBalancer
@@ -57,6 +57,8 @@ spec:
         env:
         - name: EULA
           value: "TRUE"
+        - name: TYPE
+          value: "SPONGEVANILLA"
       volumes:
       - name: minecraft-volume
         persistentVolumeClaim:
