--- a/elk/es-values.yml
+++ b/elk/es-values.yml
@@ -3,16 +3,16 @@
 antiAffinity: "soft"
 
 # Shrink default JVM heap.
-esJavaOpts: "-Xmx512m -Xms512m"
+esJavaOpts: "-Xmx1g -Xms1g"
 
 # Allocate smaller chunks of memory per pod.
 resources:
   requests:
     cpu: "100m"
-    memory: "1024M"
+    memory: "2048M"
   limits:
     cpu: "1000m"
-    memory: "1024M"
+    memory: "2048M"
 
 # Request smaller persistent volumes.
 volumeClaimTemplate:
@@ -20,4 +20,4 @@ volumeClaimTemplate:
   storageClassName: "nfs-client"
   resources:
     requests:
-      storage: 10G
+      storage: 20G
