--- a/discourse-values.yml
+++ b/discourse-values.yml
@@ -525,7 +525,7 @@ postgresql:
   ## Defaults to a random 10-character alphanumeric string if not set
   ## ref: https://github.com/bitnami/bitnami-docker-postgresql/blob/master/README.md#setting-the-root-password-on-first-run
   ##
-  # postgresqlPassword:
+  postgresqlPassword: 'two3four'
   ## PostgreSQL admin password (used when `postgresqlUsername` is not `postgres`)
   ## ref: https://github.com/bitnami/bitnami-docker-postgresql/blob/master/README.md#creating-a-database-user-on-first-run (see note!)
   ##
@@ -548,34 +548,34 @@ postgresql:
 ##
 ## External database configuration
 ##
-externalDatabase:
-  ## Database host
-  ##
-  host: ''
-  ## Database port
-  ##
-  port: 5432
-  ## non-root Username for Discourse Database
-  ##
-  user: bn_discourse
-  ## Database password
-  ##
-  password: ''
-  ## PostgreSQL admin user (used in the installation stage)
-  ##
-  postgresqlPostgresUser: ''
-  ## PostgreSQL admin password (used in the installation stage)
-  ##
-  postgresqlPostgresPassword: ''
-  ## Name of existing secret object
-  ## The secret should contain the following keys:
-  ## postgresql-postgres-password (for the unprivileged user)
-  ## postgresql-password (for root user)
-  ##
-  # existingSecret: my-secret
-  ## Database name
-  ##
-  database: bitnami_application
+# externalDatabase:
+#   ## Database host
+#   ##
+#   host: ''
+#   ## Database port
+#   ##
+#   port: 5432
+#   ## non-root Username for Discourse Database
+#   ##
+#   user: bn_discourse
+#   ## Database password
+#   ##
+#   password: ''
+#   ## PostgreSQL admin user (used in the installation stage)
+#   ##
+#   postgresqlPostgresUser: ''
+#   ## PostgreSQL admin password (used in the installation stage)
+#   ##
+#   postgresqlPostgresPassword: ''
+#   ## Name of existing secret object
+#   ## The secret should contain the following keys:
+#   ## postgresql-postgres-password (for the unprivileged user)
+#   ## postgresql-password (for root user)
+#   ##
+#   # existingSecret: my-secret
+#   ## Database name
+#   ##
+#   database: bitnami_application
 
 ## Redis(TM) chart configuration
 ##
