include ssl stuff needed for ruby

--- a/aws-dev/ansible/roles/dev-server/tasks/main.yml
+++ b/aws-dev/ansible/roles/dev-server/tasks/main.yml
@@ -14,6 +14,8 @@
       - jq
       - fzf
       - zsh
+      - libssl-dev
+      - zlib1g-dev
 
 - name: increase number of fs inotify watches
   become: true
