create the new claim for the new minecraft world

--- a/minecraft/minecraft-pvc-new.yml
+++ b/minecraft/minecraft-pvc-new.yml
@@ -1,9 +1,9 @@
-# the original buckaroo town
+# a fresh new server that alex wanted
 ---
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: minecraft-claim
+  name: minecraft-claim-new
   namespace: minecraft-new
   annotations:
     nfs.io/storage-path: "minecraft"
