--- a/minecraft/minecraft.yml
+++ b/minecraft/minecraft.yml
@@ -44,5 +44,5 @@ spec:
       volumes:
       - name: minecraft-volume
         persistentVolumeClaim:
-          claimName: minecraft-claim
+          claimName: minecraft-claim-new
 
