--- a/metallb/metallb-config.yml
+++ b/metallb/metallb-config.yml
@@ -1,12 +1,14 @@
-apiVersion: v1
-kind: ConfigMap
+apiVersion: metallb.io/v1beta1
+kind: IPAddressPool
 metadata:
+  name: main-pool
   namespace: metallb-system
-  name: config
-data:
-  config: |
-    address-pools:
-    - name: default
-      protocol: layer2
-      addresses:
-      - 192.168.150.1-192.168.150.255
+spec:
+  addresses:
+  - 192.168.1.70-192.168.1.90
+---
+apiVersion: metallb.io/v1beta1
+kind: L2Advertisement
+metadata:
+  name: main-pool-advertisement
+  namespace: metallb-system
