--- a/prometheus/prom-values.yml
+++ b/prometheus/prom-values.yml
@@ -972,10 +972,15 @@ serverFiles:
 
       - job_name: fleet-health
         static_configs:
-          - targets:
-            - 192.168.1.50:9100
-            - 192.168.1.51:9100
-            - 192.168.1.52:9100
+          - targets: ['192.168.1.50:9100']
+            labels:
+              instance: 'cactus'
+          - targets: ['192.168.1.51:9100']
+            labels:
+              instance: 'fern'
+          - targets: ['192.168.1.52:9100']
+            labels:
+              instance: 'ivy'
 
       - job_name: 'kubernetes-pods-slow'
         honor_labels: true
