--- a/prometheus/alertmanager-values.yml
+++ b/prometheus/alertmanager-values.yml
@@ -69,10 +69,9 @@ readinessProbe:
 
 service:
   annotations: {}
-  type: LoadBalancer
+  type: NodePort
   port: 9093
   clusterPort: 9094
-  loadBalancerIP: "192.168.1.76"  # Assign ext IP when Service type is LoadBalancer
   loadBalancerSourceRanges: []  # Only allow access to loadBalancerIP from these IPs
   # if you want to force a specific nodePort. Must be use with service.type=NodePort
   # nodePort:
@@ -154,8 +153,8 @@ persistence:
   ## If undefined (the default) or set to null, no storageClassName spec is
   ## set, choosing the default provisioner.
   ##
-  storageClass: local-nfs-client
-  storageClassName: local-nfs-client
+  storageClass: longhorn
+  storageClassName: longhorn
 
   accessModes:
     - ReadWriteOnce
