--- a/prometheus/prom-values.yml
+++ b/prometheus/prom-values.yml
@@ -254,13 +254,11 @@ server:
 
     # For Kubernetes >= 1.18 you should specify the ingress-controller via the field ingressClassName
     # See https://kubernetes.io/blog/2020/04/02/improvements-to-the-ingress-api-in-kubernetes-1.18/#specifying-the-class-of-an-ingress
-    # ingressClassName: nginx
+    #ingressClassName: traefik
 
     ## Prometheus server Ingress annotations
     ##
     annotations: {}
-    #   kubernetes.io/ingress.class: nginx
-    #   kubernetes.io/tls-acme: 'true'
 
     ## Prometheus server Ingress additional labels
     ##
@@ -269,9 +267,8 @@ server:
     ## Prometheus server Ingress hostnames with optional path
     ## Must be provided if Ingress is enabled
     ##
-    hosts: []
-    #   - prometheus.domain.com
-    #   - domain.com/prometheus
+    hosts: {}
+    #   - prom.grant.dev
 
     path: /
 
@@ -289,9 +286,9 @@ server:
     ## Secrets must be manually created in the namespace
     ##
     tls: []
-    #   - secretName: prometheus-server-tls
-    #     hosts:
-    #       - prometheus.domain.com
+    #   - hosts:
+    #     - prom.grant.dev
+    #     secretName: prom-cert
 
   ## Server Deployment Strategy type
   strategy:
@@ -374,8 +371,8 @@ server:
     ##   set, choosing the default provisioner.  (gp2 on AWS, standard on
     ##   GKE, AWS & OpenStack)
     ##
-    storageClass: local-nfs-client
-    storageClassName: local-nfs-client
+    storageClass: longhorn
+    storageClassName: longhorn
 
     ## Prometheus server data Persistent Volume Binding Mode
     ## If defined, volumeBindingMode: <volumeBindingMode>
@@ -556,11 +553,10 @@ server:
     ##
     externalIPs: []
 
-    loadBalancerIP: "192.168.1.75"
     loadBalancerSourceRanges: []
-    servicePort: 80
+    servicePort: 8000
     sessionAffinity: None
-    type: LoadBalancer
+    type: NodePort
 
     ## Enable gRPC port on service to allow auto discovery with thanos-querier
     gRPC:
