use dedicated prom exporter

--- a/prometheus/prom-values.yml
+++ b/prometheus/prom-values.yml
@@ -754,7 +754,7 @@ serverFiles:
 
       - job_name: truelist-app-metrics
         static_configs:
-          - targets: ['100.125.188.20:9394', '100.73.253.14:9394']
+          - targets: ['100.79.220.13:9394']
 
       - job_name: prometheus
         static_configs:
