use dedicated prom exporter

--- a/ip-monitor/job.yml
+++ b/ip-monitor/job.yml
@@ -5,6 +5,9 @@ metadata:
   namespace: ip-monitor
 spec:
   schedule: "* * * * *"
+  concurrencyPolicy: Forbid
+  successfulJobsHistoryLimit: 3
+  failedJobsHistoryLimit: 1
   jobTemplate:
     spec:
       template:
