--- a/minecraft/minecraft.yml
+++ b/minecraft/minecraft.yml
@@ -4,8 +4,12 @@ kind: Service
 metadata:
   name: minecraft-service
   namespace: minecraft-new
+  annotations:
+    metallb.universe.tf/allow-shared-ip: 'true'
+
 spec:
-  type: NodePort
+  type: LoadBalancer
+  loadBalancerIP: 192.168.50.2
   ports:
   - port: 25565
     targetPort: 25565
