make it every 5 mins

--- a/ip-monitor/job.yml
+++ b/ip-monitor/job.yml
@@ -4,7 +4,7 @@ metadata:
   name: ip-monitor-job
   namespace: ip-monitor
 spec:
-  schedule: "* * * * *"
+  schedule: "*/5 * * * *"
   concurrencyPolicy: Forbid
   successfulJobsHistoryLimit: 3
   failedJobsHistoryLimit: 1
