set up things for home assistant

--- a/home-assistant/values.yml
+++ b/home-assistant/values.yml
@@ -1,98 +1,23 @@
-# Default values for home-assistant.
-# This is a YAML-formatted file.
-# Declare variables to be passed into your templates.
-
-replicaCount: 1
-
-image:
-  repository: homeassistant/home-assistant
-  pullPolicy: IfNotPresent
-  # Overrides the image tag whose default is the chart appVersion.
-  tag: ""
-
-imagePullSecrets: []
-nameOverride: ""
-fullnameOverride: ""
-
-serviceAccount:
-  # Specifies whether a service account should be created
-  create: true
-  # Annotations to add to the service account
-  annotations: {}
-  # The name of the service account to use.
-  # If not set and create is true, a name is generated using the fullname template
-  name: ""
-
-podAnnotations: {}
-
-podSecurityContext:
-  {}
-  # fsGroup: 2000
+service:
+  type: NodePort
+  port: 8124
 
 securityContext:
-  {}
-  # capabilities:
-  #   drop:
-  #   - ALL
-  # readOnlyRootFilesystem: true
-  # runAsNonRoot: true
-  # runAsUser: 1000
-
-service:
-  type: LoadBalancer
-  loadBalancerIP: 192.168.1.72
-  port: 8123
-
-# -- Enables host networking (so that home assistant can scan devices automatically on the same network). If set to false, you might want to amend dnsPolicy value as well
-hostNetwork: true
-
-# -- Dns policy
-dnsPolicy: ClusterFirstWithHostNet
-
-ingress:
-  enabled: false
-  className: ""
-  annotations:
-    {}
-    # kubernetes.io/ingress.class: nginx
-    # kubernetes.io/tls-acme: "true"
-  hosts:
-    - host: chart-example.local
-      paths:
-        - path: /
-          pathType: ImplementationSpecific
-  tls: []
-  #  - secretName: chart-example-tls
-  #    hosts:
-  #      - chart-example.local
-
-resources:
-  {}
-  # We usually recommend not to specify default resources and to leave this as a conscious
-  # choice for the user. This also increases chances charts run on environments with little
-  # resources, such as Minikube. If you do want to specify resources, uncomment the following
-  # lines, adjust them as necessary, and remove the curly braces after 'resources:'.
-  # limits:
-  #   cpu: 100m
-  #   memory: 128Mi
-  # requests:
-  #   cpu: 100m
-  #   memory: 128Mi
-
-nodeSelector: {}
-
-tolerations: []
-
-affinity: {}
+  privileged: true
 
 persistence:
-  storageClass: local-nfs-client
-  existingClaim: ""
   enabled: true
-  accessMode: ReadWriteOnce
-  size: 5Gi
-  # if you need any additional volumes, you can define them here
-  additionalVolumes: []
-  # if you need any additional volume mounts, you can define them here
-  additionalMounts: []
+  storageClass: "longhorn"
+  accessMode: "ReadWriteOnce"
+  existingVolume: home-assistant-home-assistant-0
 
+additionalVolumes:
+  - hostPath:
+      path: >-
+        /dev/serial/by-id/usb-ITEAD_SONOFF_Zigbee_3.0_USB_Dongle_Plus_V2_20230803102536-if00
+      type: CharDevice
+    name: usb
+
+additionalMounts:
+  - mountPath: /dev/ttyACM0
+    name: usb
