--- a/minecraft/db_backup/pod.yml
+++ b/minecraft/db_backup/pod.yml
@@ -11,18 +11,7 @@ spec:
     volumeMounts:
     - name: minecraft-volume
       mountPath: "/data"
-    env:
-      - name: AWS_ACCESS_KEY_ID
-        valueFrom:
-          secretKeyRef:
-            name: s3-creds
-            key: aws-access-key-id
-      - name: AWS_SECRET_ACCESS_KEY
-        valueFrom:
-          secretKeyRef:
-            name: s3-creds
-            key: aws-secret-access-key
-    command: ['sh','-c','sleep 3600']
+    command: ['sh','-c','sleep infinity']
   volumes:
   - name: minecraft-volume
     persistentVolumeClaim:
