--- a/minecraft/minecraft-pvc-new.yml
+++ b/minecraft/minecraft-pvc-new.yml
@@ -10,7 +10,7 @@ metadata:
 spec:
   storageClassName: longhorn
   accessModes:
-  - ReadWriteMany
+  - ReadWriteOnce
   resources:
     requests:
       storage: 10Gi
