--- a/minecraft/minecraft.yml
+++ b/minecraft/minecraft.yml
@@ -4,18 +4,15 @@ kind: Service
 metadata:
   name: minecraft-service
   namespace: minecraft-new
-  annotations:
-    metallb.universe.tf/allow-shared-ip: 'true'
 
 spec:
-  type: LoadBalancer
-  loadBalancerIP: 192.168.50.2
+  type: NodePort
   ports:
   - port: 25565
     targetPort: 25565
+    nodePort: 30000
   selector:
     app: minecraft
-  type: LoadBalancer
 ---
 apiVersion: apps/v1
 kind: Deployment
