--- a/prometheus/grafana-values.yml
+++ b/prometheus/grafana-values.yml
@@ -213,9 +213,8 @@ service:
     # targetPort: 4181 To be used with a proxy extraContainer
   ## Service annotations. Can be templated.
   annotations:
-    metallb.universe.tf/loadBalancerIPs: 192.168.20.2
+    metallb.universe.tf/address-pool: main-pool
   labels: {}
-  portName: service
   # Adds the appProtocol field to the service. This allows to work with istio protocol selection. Ex: "http" or "tcp"
   appProtocol: ""
 
