--- a/metallb/metallb-config.yml
+++ b/metallb/metallb-config.yml
@@ -12,3 +12,6 @@ kind: L2Advertisement
 metadata:
   name: main-pool-advertisement
   namespace: metallb-system
+spec:
+  ipAddressPools:
+  - main-pool
