--- a/prometheus/rds.yml
+++ b/prometheus/rds.yml
@@ -5,7 +5,7 @@ apiVersion: v1
 kind: Service
 metadata:
   annotations:
-    tailscale.com/tailnet-ip: 100.92.165.22
+    tailscale.com/tailnet-ip: default-truelist-prod-db.rya-scala.ts.net
   name: rds-production
 spec:
   externalName: rds-prod
