--- a/unifi/deployment.yml
+++ b/unifi/deployment.yml
@@ -45,7 +45,7 @@ metadata:
   name: lb-unifi
   namespace: unifi
   annotations:
-    metallb.universe.tf/allow-shared-ip: 'true'
+    metallb.universe.tf/loadBalancerIPs: 192.168.10.1
 spec:
   ports:
     - name: '8080'
@@ -68,20 +68,6 @@ spec:
       protocol: TCP
       port: 6789
       targetPort: 6789
-  selector:
-    name: unifi-controller
-  type: LoadBalancer
-  loadBalancerIP: 192.168.20.1
----
-kind: Service
-apiVersion: v1
-metadata:
-  name: lb-unifi-udp
-  namespace: unifi
-  annotations:
-    metallb.universe.tf/allow-shared-ip: 'true'
-spec:
-  ports:
     - name: '3478'
       protocol: UDP
       port: 3478
@@ -89,5 +75,21 @@ spec:
   selector:
     name: unifi-controller
   type: LoadBalancer
-  loadBalancerIP: 192.168.20.1
-
+  # ---
+  # kind: Service
+  # apiVersion: v1
+  # metadata:
+  #   name: lb-unifi-udp
+  #   namespace: unifi
+  #   annotations:
+  #     metallb.universe.tf/loadBalancerIPs: 192.168.10.1
+  # spec:
+  #   ports:
+  #     - name: '3478'
+  #       protocol: UDP
+  #       port: 3478
+  #       targetPort: 3478
+  #   selector:
+  #     name: unifi-controller
+  #   type: LoadBalancer
+  #
