--- a/prometheus/truelist-prometheus-node-exporter-service.yml
+++ b/prometheus/truelist-prometheus-node-exporter-service.yml
@@ -67,3 +67,20 @@ spec:
   - name: metrics
     port: 9100
     targetPort: 9100
+---
+apiVersion: v1
+kind: Service
+metadata:
+  namespace: observability
+  annotations:
+    tailscale.com/tailnet-ip: 100.127.111.3
+  name: truelist-prod-prometheus-exporter-node-5
+  labels:
+    monitoring: node-health
+spec:
+  externalName: placeholder   # any value - will be overwritten by operator
+  type: ExternalName
+  ports:
+  - name: metrics
+    port: 9100
+    targetPort: 9100
