--- a/kube-prometheus-stack/values.yaml
+++ b/kube-prometheus-stack/values.yaml
@@ -2669,10 +2669,10 @@ prometheusOperator:
   ## Namespaces to scope the interaction of the Prometheus Operator and the apiserver (allow list).
   ## This is mutually exclusive with denyNamespaces. Setting this to an empty object will disable the configuration
   ##
-  namespaces: {}
-    # releaseNamespace: true
-    # additional:
-    # - kube-system
+  namespaces:
+    releaseNamespace: true
+    additional:
+      - observability
 
   ## Namespaces not to scope the interaction of the Prometheus Operator (deny list).
   ##
